--- a/ch4/package.json
+++ b/ch4/package.json
@@ -10,6 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "compression": "^1.6.2",
+    "connect-busboy": "0.0.2",
+    "connect-timeout": "^1.8.0",
+    "errorhandler": "^1.5.0",
+    "express": "^4.14.0",
+    "method-override": "^2.3.7",
+    "morgan": "^1.7.0",
+    "response-time": "^2.3.2",
+    "serve-favicon": "^2.3.2",
+    "serve-index": "^1.8.0",
+    "vhost": "^3.0.2"
   }
 }
