--- a/ch4/package.json
+++ b/ch4/package.json
@@ -15,6 +15,7 @@
     "connect-timeout": "^1.8.0",
     "errorhandler": "^1.5.0",
     "express": "^4.14.0",
+    "jade": "^1.11.0",
     "method-override": "^2.3.7",
     "morgan": "^1.7.0",
     "response-time": "^2.3.2",
