--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,15 @@
             "outFiles": [],
             "sourceMaps": true
         },
+          {
+            "type": "node",
+            "request": "launch",
+            "name": "Chapter 06 Program",
+            "program": "${workspaceRoot}/ch6/app.js",
+            "cwd": "${workspaceRoot}",
+            "outFiles": [],
+            "sourceMaps": true
+        },
         {
             "type": "node",
             "request": "attach",
