--- a/ch9/package.json
+++ b/ch9/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cli-app": "^0.1.0",
     "compression": "^1.6.2",
     "connect-busboy": "0.0.2",
     "connect-timeout": "^1.8.0",
